Fix: background image scrollbar

--- a/Frontend/src/app/components/home/home.component.scss
+++ b/Frontend/src/app/components/home/home.component.scss
@@ -57,6 +57,8 @@
                 display: flex;
                 flex-direction: column;
                 padding: 20px;
+                cursor: pointer;
+                
                 &-cover{
                     
                     img{
